--- a/source/style/style.scss
+++ b/source/style/style.scss
@@ -1,59 +1,86 @@
-$red: #f00;
-$green: #090;
-$blue: #00f;
-$radius: 30px;
+@import url('https://fonts.googleapis.com/css?family=Playfair+Display:700|Tangerine');
 
-@font-face {
-  font-family: 'Lato';
-  src: url('./fonts/Lato-Regular.ttf');
-}
+$numberOfSlides: 5;
+$showSlideSeconds: 7s;
+$slideLoopLength: $numberOfSlides *  $showSlideSeconds;
+$slideHeight: 320px;
+$tangerine: 'Tangerine', cursive;
+$playfair: 'Playfair Display', serif;
 
-p {
-  font-family: Lato, sans-serif;
-  font-size: 14px;
-  line-height: 1.75em;
-}
+.slider {
+  align-items: center;
+  display: flex;
+  height: $slideHeight;
+  justify-content: center;
+  margin: 0;
+  overflow: hidden;
+  padding: 0;
+  position: relative;
+  width: 100%;
 
-a,
-a:visited,
-a:hover,
-a:active {
-  color: $blue;
-}
-
-div {
-  max-width: 420px;
-  margin: 0 auto;
-  margin-top: 30px;
-  padding: 20px 40px;
-  font-size: 12px;
-  background-color: #eee;
-  box-shadow: 5px 5px 5px #ccc;
-  border-radius: $radius;
-
-  h1 {
-    font-family: 'Bungee Shade', cursive;
-    color: $green;
+  &__slide {
+    align-items: center;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    list-style: none;
+    position: absolute;
+    transform: translate3d(-100%, 0, 0);
+    width: 100%;
   }
 
-  p {
-    span {
-      color: $red;
+  &__quote {
+    font-family: $tangerine;
+    font-size: 6vw;
+  }
+
+  &__source {
+    align-self: flex-end;
+    font-family: $playfair;
+    font-size: 2.5vw;
+    width: 30%;
+  }
+
+  @for $i from 1 through $numberOfSlides {
+    .animation-#{$i} {
+      animation: cycle $slideLoopLength linear ($i - 1) / $numberOfSlides * $slideLoopLength infinite;
     }
   }
 
-  img {
-    margin-bottom: 10px;
-    border: 10px solid #fff;
-    box-shadow: 5px 5px 5px #ccc;
-  }
-
-  cite {
-    margin-left: 10px;
-    color: #888;
+  &:hover .slider__slide {
+    animation-play-state: paused;
   }
 }
 
-a {
-    display: flex;
+@keyframes cycle {
+  0% {
+    opacity: 0;
+    transform: translate3d(-100%, 0, 0);
+  }
+
+  4% {
+    transform: translate3d(0, 0, 0);
+  }
+
+  16% {
+    opacity: 1;
+    transform: translate3d(0, 0, 0);
+    z-index: 0;
+  }
+
+  20% {
+    opacity: 0;
+    transform: translate3d(100%, 0, 0);
+    z-index: 0;
+  }
+
+  21% {
+    opacity: 0;
+    transform: translate3d(-100%, 0, 0);
+    z-index: -1;
+  }
+
+  92% {
+    z-index: 0;
+  }
 }
